engine/parser/src/ro/sft/recruiter/SWL.java
/* Generated By:JJTree&JavaCC: Do not edit this line. SWL.java */
package ro.sft.recruiter;

public class SWL/*@bgen(jjtree)*/implements SWLTreeConstants, SWLConstants {/*@bgen(jjtree)*/
  protected JJTSWLState jjtree = new JJTSWLState();
  private int nestingLvl = 0;


  public static void main(String args [])
  {
    System.out.println("Reading from standard input...");
    System.out.print("Enter an expression like \u005c"1+(2+3)*var;\u005c" :");
    SWL parser = new SWL(System.in);
    try
    {
      ASTSwdlFile n = parser.SwdlFile();
      n.dump("");
      System.out.println("Thank you.");
    }
    catch (Exception e)
    {
      System.out.println("Oops.");
      System.out.println(e.getMessage());
    }
  }

/** ******************************************************************** */
/** *************************  SWL GRAMMAR  **************************** */
/** ******************************************************************** */
  final public ASTSwdlFile SwdlFile() throws ParseException {
    trace_call("SwdlFile");
    try {
 /*@bgen(jjtree) SwdlFile */
  ASTSwdlFile jjtn000 = new ASTSwdlFile(JJTSWDLFILE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        NameDecl();
        label_1:
        while (true) {
          Module();
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case MODULE:
            ;
            break;
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
        }
        jj_consume_token(0);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    {if (true) return jjtn000;}
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    throw new Error("Missing return statement in function");
    } finally {
      trace_return("SwdlFile");
    }
  }

  final public void NameDecl() throws ParseException {
    trace_call("NameDecl");
    try {
 /*@bgen(jjtree) NameDecl */
  ASTNameDecl jjtn000 = new ASTNameDecl(JJTNAMEDECL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(APP_NAME);
        AppName();
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("NameDecl");
    }
  }

  final public void AppName() throws ParseException {
    trace_call("AppName");
    try {
 /*@bgen(jjtree) AppName */
  ASTAppName jjtn000 = new ASTAppName(JJTAPPNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        t = jj_consume_token(QUOTED_IDENTIFIER);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("AppName");
    }
  }

  final public void Module() throws ParseException {
    trace_call("Module");
    try {
 /*@bgen(jjtree) Module */
  ASTModule jjtn000 = new ASTModule(JJTMODULE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(MODULE);
        ModuleName();
        ModuleBody();
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Module");
    }
  }

  final public void ModuleName() throws ParseException {
    trace_call("ModuleName");
    try {
 /*@bgen(jjtree) ModuleName */
  ASTModuleName jjtn000 = new ASTModuleName(JJTMODULENAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        t = jj_consume_token(NAME);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    System.out.println("Matched module name :"+t.image);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("ModuleName");
    }
  }

  final public void ModuleBody() throws ParseException {
    trace_call("ModuleBody");
    try {
 /*@bgen(jjtree) ModuleBody */
  ASTModuleBody jjtn000 = new ASTModuleBody(JJTMODULEBODY);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(OPEN_BRACKET);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case UI:
          Ui();
          break;
        default:
          jj_la1[1] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LOGIC:
          Logic();
          break;
        default:
          jj_la1[2] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOMAIN:
          Domain();
          break;
        default:
          jj_la1[3] = jj_gen;
          ;
        }
        jj_consume_token(CLOSE_BRACKET);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("ModuleBody");
    }
  }

  final public void Ui() throws ParseException {
    trace_call("Ui");
    try {
 /*@bgen(jjtree) Ui */
  ASTUi jjtn000 = new ASTUi(JJTUI);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(UI);
        jj_consume_token(OPEN_BRACKET);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case SCREEN:
            ;
            break;
          default:
            jj_la1[4] = jj_gen;
            break label_2;
          }
          Screen();
        }
        jj_consume_token(CLOSE_BRACKET);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Ui");
    }
  }

  final public void Screen() throws ParseException {
    trace_call("Screen");
    try {
 /*@bgen(jjtree) Screen */
  ASTScreen jjtn000 = new ASTScreen(JJTSCREEN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(SCREEN);
        ScreenName();
        jj_consume_token(OPEN_BRACKET);
        MvcArea();
        jj_consume_token(CLOSE_BRACKET);
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Screen");
    }
  }

  final public void ScreenName() throws ParseException {
    trace_call("ScreenName");
    try {
 /*@bgen(jjtree) ScreenName */
  ASTScreenName jjtn000 = new ASTScreenName(JJTSCREENNAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token t;
      try {
        t = jj_consume_token(NAME);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("ScreenName");
    }
  }

  final public void Model() throws ParseException {
    trace_call("Model");
    try {
 /*@bgen(jjtree) Model */
  ASTModel jjtn000 = new ASTModel(JJTMODEL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(MODEL);
        GenericBlock();
      } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
      } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
      }
    } finally {
      trace_return("Model");
    }
  }

  final public void Controller() throws ParseException {
    trace_call("Controller");
    try {
                    /*@bgen(jjtree) Controller */
  ASTController jjtn000 = new ASTController(JJTCONTROLLER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(CONTROLLER);
        GenericBlock();
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Controller");
    }
  }

  final public void GenericBlock() throws ParseException {
    trace_call("GenericBlock");
    try {
 /*@bgen(jjtree) GenericBlock */
  ASTGenericBlock jjtn000 = new ASTGenericBlock(JJTGENERICBLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(OPEN_BRACKET);
         token_source.SwitchTo(JsContentState);
         nestingLvl++;
        label_3:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case OPEN_BRACKET:
          case ANY_NON_OPEN_CLOSE:
            ;
            break;
          default:
            jj_la1[5] = jj_gen;
            break label_3;
          }
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case ANY_NON_OPEN_CLOSE:
            jj_consume_token(ANY_NON_OPEN_CLOSE);
            break;
          case OPEN_BRACKET:
            GenericBlock();
            break;
          default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        jj_consume_token(CLOSE_BRACKET);
    jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
    nestingLvl--;
    if ( nestingLvl == 0 )
    {
      token_source.SwitchTo(DEFAULT);
    }
      } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("GenericBlock");
    }
  }

  final public void MvcArea() throws ParseException {
    trace_call("MvcArea");
    try {
                  /*@bgen(jjtree) MvcArea */
  ASTMvcArea jjtn000 = new ASTMvcArea(JJTMVCAREA);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MODEL:
          Model();
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case CONTROLLER:
          Controller();
          break;
        default:
          jj_la1[8] = jj_gen;
          ;
        }
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INPUT:
          case INPUT_AREA:
          case INPUT_FILE:
          case CHECKBOX:
          case SELECTBOX:
          case LABEL:
          case RADIO:
          case RADIOS:
          case IMG:
          case VERTICAL_LAYOUT:
          case HORIZONTAL_LAYOUT:
          case HORIZONTAL_FORM:
          case SECTION:
          case BR:
          case H1:
          case H2:
          case H3:
          case H4:
          case H5:
          case H6:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_4;
          }
          Component();
        }
      } catch (Throwable jjte000) {
     if (jjtc000) {
       jjtree.clearNodeScope(jjtn000);
       jjtc000 = false;
     } else {
       jjtree.popNode();
     }
     if (jjte000 instanceof RuntimeException) {
       {if (true) throw (RuntimeException)jjte000;}
     }
     if (jjte000 instanceof ParseException) {
       {if (true) throw (ParseException)jjte000;}
     }
     {if (true) throw (Error)jjte000;}
      } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
      }
    } finally {
      trace_return("MvcArea");
    }
  }

  final public void Component() throws ParseException {
    trace_call("Component");
    try {
                   /*@bgen(jjtree) Component */
  ASTComponent jjtn000 = new ASTComponent(JJTCOMPONENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INPUT:
          Input();
          break;
        case INPUT_FILE:
          InputFile();
          break;
        case INPUT_AREA:
          InputArea();
          break;
        case CHECKBOX:
          Checkbox();
          break;
        case SELECTBOX:
          Selectbox();
          break;
        case LABEL:
          Label();
          break;
        case RADIO:
          Radio();
          break;
        case RADIOS:
          Radios();
          break;
        case IMG:
          Img();
          break;
        case VERTICAL_LAYOUT:
          VerticalLayout();
          break;
        case HORIZONTAL_LAYOUT:
          HorizontalLayout();
          break;
        case HORIZONTAL_FORM:
          HorizontalForm();
          break;
        case SECTION:
          Section();
          break;
        case BR:
          Br();
          break;
        case H1:
          H1();
          break;
        case H2:
          H2();
          break;
        case H3:
          H3();
          break;
        case H4:
          H4();
          break;
        case H5:
          H5();
          break;
        case H6:
          H6();
          break;
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("Component");
    }
  }

  final public void VerticalLayout() throws ParseException {
    trace_call("VerticalLayout");
    try {
                         /*@bgen(jjtree) VerticalLayout */
  ASTVerticalLayout jjtn000 = new ASTVerticalLayout(JJTVERTICALLAYOUT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(VERTICAL_LAYOUT);
        VerticalLayoutDescription();
        jj_consume_token(OPEN_BRACKET);
        MvcArea();
        jj_consume_token(CLOSE_BRACKET);
      } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
      } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
      }
    } finally {
      trace_return("VerticalLayout");
    }
  }

  final public void HorizontalLayout() throws ParseException {
    trace_call("HorizontalLayout");
    try {
                           /*@bgen(jjtree) HorizontalLayout */
  ASTHorizontalLayout jjtn000 = new ASTHorizontalLayout(JJTHORIZONTALLAYOUT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(HORIZONTAL_LAYOUT);
        HorizontalLayoutDescription();
        jj_consume_token(OPEN_BRACKET);
        MvcArea();
        jj_consume_token(CLOSE_BRACKET);
      } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
      } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
      }
    } finally {
      trace_return("HorizontalLayout");
    }
  }

  final public void HorizontalForm() throws ParseException {
    trace_call("HorizontalForm");
    try {
                         /*@bgen(jjtree) HorizontalForm */
  ASTHorizontalForm jjtn000 = new ASTHorizontalForm(JJTHORIZONTALFORM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(HORIZONTAL_FORM);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("HorizontalForm");
    }
  }

  final public void Section() throws ParseException {
    trace_call("Section");
    try {
                  /*@bgen(jjtree) Section */
  ASTSection jjtn000 = new ASTSection(JJTSECTION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
      try {
        jj_consume_token(SECTION);
      } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
      }
    } finally {
      trace_return("Section");
    }
  }
